Fix footer overflowing container

--- a/site/assets/sass/_footer.scss
+++ b/site/assets/sass/_footer.scss
@@ -1,6 +1,4 @@
 .copyright {
-    margin-top: .75rem;
-
     a.npm {
         border-bottom: 0;
 
